Revision history for Dependencies-Searcher

0.05_02 2013-09-
 [EHANCEMENTS]
 - Build an independant module for the Ack part, that returns an array containing interesting lines
 - Add a MIN_PERL_VERSION (5.010) in Makefile.PL as recommanded at CPANTS

0.05_01 2013-09-10 23:10
 [EHANCEMENTS]
 - Test Ack availability in tests
 - Remove tests that asks for a static number of results (non-predictable) 

0.04    2013-09-09 17:38:24 
 [FIXES]
 - [RT #88528] Dependencies::Searcher::Utils have been removed
   trying to clean up test failures

0.03    2013-09-04 01:45
 [FIXES]
 - [RT #88392] Fix a bug about version number in Changes file
 - Use the CPAN App::Ack, not the the one from packages managers 

 [EHANCEMENTS]
 - Can now get the count of core / non-core modules 
 - Add some Moose helper traits for ArrayRef attributes, now you can
   add and count and the code is easiest to read !
 - Clean a lot of logs
 - Change the dissociate() implementation with Moose traits 
 - Add clean_everything(), uniq() and dissociate() methods
 - Add two Moose attributes for core / non-core modules
 - Ignore use warnings FATAL => 'all'; 
 - Ignore parsed modules minimal perl versions.
 - Moosification of the module.

0.02    2013-09-02 20:48
 - First version, released on an unsuspecting world. 
 - Exile the module from the Shurf::Wax distribution because it seems 
   it could be re-used for other projects and by you. 
      
0.01    2013-07-21
 - Begin it as a script embedded in a Catalyst app.
   See https://github.com/smonff/Shurf/commits/master/script/uses_finder.pl
        
